--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -1,4 +1,4 @@
-name: Telegram APK Auto-Patcher
+name: Plus APK Auto-Patcher
 
 on:
   repository_dispatch:
@@ -28,12 +28,12 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get install -y wget zipalign aapt
 
-      - name: Download Telegram APK
+      - name: Download Plus APK
         run: |
-          tg_apk_url="https://dw.uptodown.net/dwn/RvVkii134Riphftvun7hQBZyU0aCwJjJMFI3FD3XyiTBXJwbWVG2-cl3L20nVRgCpSBjT0NZoCz86P-IbqqSi2yWV8GLNz3dNfkwGUHwzYvPosiLpg8SEcCK-UPzujoM/UczjAXea5rSOuFlew0774sJFlIgzW8e4_Jm68aPbk4-D1PLcG6niTt4gnQRIYUMW0om7fD3U_LAsn5djojFiowOdX0RChBwK-l0oI4YVoC57dRKMgV9ZgqfOoyUt3hbw/_nT46A_a7n-omvDZh94z2i2aug1t1RrbiUpRRiJxeF8S3sUdJN3T3BHKQ0U25qq0wXwfHecaGOLkp87oTXYfMNPIVXiPmup_uyQgXiWuKBY=/plus-messenger-11-13-0-0.apk"
+          tg_apk_url="https://dw.uptodown.net/dwn/RvVkii134Riphftvun7hQBZyU0aCwJjJMFI3FD3XyiTUW8xb9VAvQqV5stPf1WPSv9sWWdEo8U3bAiXJV1RCO6arsCSDoYFiLxyUiGu0U0ri7-qkF_a7-J4DajFwkdqk/IUMY1c4ToBYr1ceAUjl6bJEwq43YckC-Q9ctsA8nhDDTNt7djvBUQ3Ydnnrik-fmKsxAiZPtxTVuPEeqsIo1cPbixRBShzeffHquyZVyciBDW61LbTItkGecBRfY3CIK/X2HrKEyQCeLKcyX4UGzyvtYyffAq6FTUkx8iUIhScO8J1QbrCy6RMG2HPFAXRWpIGFQkwR0WRbgZXP0-DVPSRl9S6vK7mwYOSHQk-NEPNB0=/plus-messenger-11-13-0-0.apk"
           wget -q --show-progress $tg_apk_url -O Plus.apk
 
-      - name: Get latest Telegram version
+      - name: Get latest Plus version
         id: get_version
         run: |
           aapt dump badging Plus.apk | grep -oP "versionName='[^']*" | cut -d "'" -f2 > tg_version.txt
@@ -56,7 +56,7 @@ jobs:
             echo "new_version_available=false" >> $GITHUB_ENV
           fi
 
-      - name: Set Telegram Version
+      - name: Set Plus Version
         if: env.new_version_available == 'true'
         id: set_version
         run: echo "version=$(cat tg_version.txt)" >> $GITHUB_ENV
@@ -73,17 +73,17 @@ jobs:
         if: env.new_version_available == 'true'
         run: |
           java -jar apktool.jar d Plus.apk -f
-          rm -rf Telegram/lib/x86*
+          rm -rf Plus/lib/x86*
 
       - name: Apply Anti+Normal Patches
         if: env.new_version_available == 'true'
         run: |
           java -jar apktool.jar d Plus.apk -f
-          rm -rf Telegram/lib/x86*
+          rm -rf Plus/lib/x86*
           echo "Applying Anti+Normal Patches..."
-          python3 tgpatcher.py --anti --dir Telegram/
+          python3 tgpatcher.py --anti --dir Plus/
           echo "Patches applied, building apk..."
-          java -jar apktool.jar b Telegram/ -o Plus_Anti_Patched.apk
+          java -jar apktool.jar b Plus/ -o Plus_Anti_Patched.apk
           echo "NOTE: apk may not be signed, you may need to sign it manually."
 
       - name: ZipAlign APks
@@ -95,39 +95,39 @@ jobs:
       - name: Sign APks
         if: env.new_version_available == 'true'
         run: |
-          java -jar keystore/apksigner.jar sign --in Plus_Anti_Patched_aligned.apk --out Telegram_Patched_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
+          java -jar keystore/apksigner.jar sign --in Plus_Anti_Patched_aligned.apk --out Plus_Patched_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
           rm Plus_Anti_Patched_aligned.apk
 
       - name: Install upload requirements
         if: env.new_version_available == 'true'
         run: pip install pyrofork tgcrypto
 
-      - name: Send Anti APK to Telegram
+      - name: Send Anti APK to Plus
         if: env.new_version_available == 'true'
         run: |
           export BOT_TOKEN=${{ secrets.BOT_TOKEN }}
           export API_ID=${{ secrets.API_ID }}
           export API_HASH=${{ secrets.API_HASH }}
-          python3 tgupload.py Telegram_Patched_${{ env.version }}.apk --chat-id ${{ secrets.CHAT_ID }} --caption "$(cat <<EOF
-          **Telegram [ Premium ] [ Local+ ] [ Direct ] [ Normal + Anti ]**
+          python3 tgupload.py Plus_Patched_${{ env.version }}.apk --chat-id ${{ secrets.CHAT_ID }} --caption "$(cat <<EOF
+          **Plus [ Premium ] [ Local+ ] [ Direct ] [ Normal + Anti ]**
           **Version :** ${{ env.version }}
           **Architecture :** Arm + Arm64
           
           **Requirements:** Android 6.0 and up
           **Overview:**
-          Telegram is a messaging app with a focus on speed and security.
+          Plus is a messaging app with a focus on speed and security.
           
           **❏Changelogs:**
-          ● See [Full Changelogs](https://telegra.ph/Telegram-premium-07-22-10)
+          ● See [Full Changelogs](https://telegra.ph/Plus-premium-07-22-10)
           - [New] Anti-Del Mode: Button toggle to enable Anti-Del Mode
-          - Can be found in Settings -> Telegram Business -> Anti-Del Mode
+          - Can be found in Settings -> Plus Business -> Anti-Del Mode
           
           - **Released by [ Tech Shreyansh ]**
           
           👉 **How to Save/Forward from copyrighted channels:** [Watch Here](https://youtu.be/-X-Ixy73reI)
           
           **NOTE:**
-            - If you're **facing issue during login** like internal error, not getting OTP then **download Telegram X** from play store -> Login in it -> come back and login to mod
+            - If you're **facing issue during login** like internal error, not getting OTP then **download Original telegram** from play store -> Login in it -> come back and login to mod
             - Adding stories functionality gets unlocked with premium mod, but
               - If you still didn't get the story feature, [read more about it here](http://tginfo.me/stories-by-countries)
           
