--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -115,7 +115,7 @@ jobs:
           
           **Requirements:** Android 6.0 and up
           **Overview:**
-          Plus is a messaging app with a focus on speed and security.
+          Telegram is a messaging app with a focus on speed and security.
           
           **❏Changelogs:**
           ● See [Full Changelogs](https://telegra.ph/Telegram-premium-07-22-10)
