--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -1,4 +1,4 @@
-name: Telegram APK Auto-Patcher
+name: Plus APK Auto-Patcher
 
 on:
   repository_dispatch:
@@ -28,15 +28,15 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get install -y wget zipalign aapt
 
-      - name: Download Telegram APK
+      - name: Download Plus APK
         run: |
-          tg_apk_url="https://telegram.org/dl/android/apk"
-          wget -q --show-progress $tg_apk_url -O Telegram.apk
+          tg_apk_url="https://drive.usercontent.google.com/download?id=1CZtru40_Xob78wdfhTO1vwPBBYBqhzGC&export=download&authuser=0&confirm=t&uuid=b394148f-8ce5-493f-acf2-033087fe9c2f&at=AN8xHoqvhunQxWbybMh2TFZnGX34%3A1755606744864"
+          wget -q --show-progress $tg_apk_url -O Plus.apk
 
-      - name: Get latest Telegram version
+      - name: Get latest Plus version
         id: get_version
         run: |
-          aapt dump badging Telegram.apk | grep -oP "versionName='[^']*" | cut -d "'" -f2 > tg_version.txt
+          aapt dump badging Plus.apk | grep -oP "versionName='[^']*" | cut -d "'" -f2 > tg_version.txt
           echo "Latest version: $(cat tg_version.txt)"
         
       - name: Check if new version is available
@@ -56,7 +56,7 @@ jobs:
             echo "new_version_available=false" >> $GITHUB_ENV
           fi
 
-      - name: Set Telegram Version
+      - name: Set Plus Version
         if: env.new_version_available == 'true'
         id: set_version
         run: echo "version=$(cat tg_version.txt)" >> $GITHUB_ENV
@@ -72,44 +72,44 @@ jobs:
       - name: Decompile APK
         if: env.new_version_available == 'true'
         run: |
-          java -jar apktool.jar d Telegram.apk -f
-          rm -rf Telegram/lib/x86*
+          java -jar apktool.jar d Plus.apk -f
+          rm -rf Plus/lib/x86*
 
       - name: Apply Anti+Normal Patches
         if: env.new_version_available == 'true'
         run: |
-          java -jar apktool.jar d Telegram.apk -f
-          rm -rf Telegram/lib/x86*
+          java -jar apktool.jar d Plus.apk -f
+          rm -rf Plus/lib/x86*
           echo "Applying Anti+Normal Patches..."
-          python3 tgpatcher.py --anti --dir Telegram/
+          python3 tgpatcher.py --anti --dir Plus/
           echo "Patches applied, building apk..."
-          java -jar apktool.jar b Telegram/ -o Telegram_Anti_Patched.apk
+          java -jar apktool.jar b Plus/ -o Plus_Anti_Patched.apk
           echo "NOTE: apk may not be signed, you may need to sign it manually."
 
       - name: ZipAlign APks
         if: env.new_version_available == 'true'
         run: |
-          zipalign -p -f 4 Telegram_Anti_Patched.apk Telegram_Anti_Patched_aligned.apk
-          rm Telegram_Anti_Patched.apk
+          zipalign -p -f 4 Plus_Anti_Patched.apk Plus_Anti_Patched_aligned.apk
+          rm Plus_Anti_Patched.apk
 
       - name: Sign APks
         if: env.new_version_available == 'true'
         run: |
-          java -jar keystore/apksigner.jar sign --in Telegram_Anti_Patched_aligned.apk --out Telegram_Patched_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
-          rm Telegram_Anti_Patched_aligned.apk
+          java -jar keystore/apksigner.jar sign --in Plus_Anti_Patched_aligned.apk --out Plus_Patched_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
+          rm Plus_Anti_Patched_aligned.apk
 
       - name: Install upload requirements
         if: env.new_version_available == 'true'
         run: pip install pyrofork tgcrypto
 
-      - name: Send Anti APK to Telegram
+      - name: Send Anti APK to Plus
         if: env.new_version_available == 'true'
         run: |
           export BOT_TOKEN=${{ secrets.BOT_TOKEN }}
           export API_ID=${{ secrets.API_ID }}
           export API_HASH=${{ secrets.API_HASH }}
-          python3 tgupload.py Telegram_Patched_${{ env.version }}.apk --chat-id ${{ secrets.CHAT_ID }} --caption "$(cat <<EOF
-          **Telegram [ Premium ] [ Local+ ] [ Direct ] [ Normal + Anti ]**
+          python3 tgupload.py Plus_Patched_${{ env.version }}.apk --chat-id ${{ secrets.CHAT_ID }} --caption "$(cat <<EOF
+          **Telegram [ Premium ] [ Local+ ] [ Direct ] [ Normal + Force-Anti-Delete ]**
           **Version :** ${{ env.version }}
           **Architecture :** Arm + Arm64
           
@@ -118,18 +118,18 @@ jobs:
           Telegram is a messaging app with a focus on speed and security.
           
           **❏Changelogs:**
-          ● See [Full Changelogs](https://telegra.ph/Telegram-premium-08-16-5)
+          ● See [Full Changelogs](https://telegra.ph/Telegram-premium-07-22-10)
           - [New] Anti-Del Mode: Button toggle to enable Anti-Del Mode
-              - Can be found in Settings -> Telegram Business -> Anti-Del Mode
+          - Can be found in Settings -> Telegram Business -> Anti-Del Mode
           
-          - **Released by [ Abhi ]**
+          - **Released by [ Tech Shreyansh ]**
           
-          👉 **How to Save/Forward from copyrighted channels:** [Watch Here](https://youtu.be/TIlxcnzC-mM)
+          👉 **How to Save/Forward from copyrighted channels:** [Watch Here](https://youtu.be/-X-Ixy73reI)
           
           **NOTE:**
-            - If you're **facing issue during login** like internal error, not getting OTP then **download Telegram X** from play store -> Login in it -> come back and login to mod
+            - If you're **facing issue during login** like internal error, not getting OTP then **download Original telegram** from play store -> Login in it -> come back and login to mod
             - Adding stories functionality gets unlocked with premium mod, but
-              - If you still didn't get the story feature, [read more about it here](http://tginfo.me/stories-by-countries)
+            - If you still didn't get the story feature, [read more about it here](http://tginfo.me/stories-by-countries)
           
           EOF
           )"
