--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Download Plus APK
         run: |
-          tg_apk_url="http://major-mela-b-ot-zhub01-5404cfb8.koyeb.app/103?hash=AgADJR"
+          tg_apk_url="http://major-mela-b-ot-zhub01-5404cfb8.koyeb.app/5?hash=AgADhy"
           wget -q --show-progress $tg_apk_url -O Plus.apk
 
       - name: Get latest Plus version
@@ -95,7 +95,7 @@ jobs:
       - name: Sign APks
         if: env.new_version_available == 'true'
         run: |
-          java -jar keystore/apksigner.jar sign --in Plus_Anti_Patched_aligned.apk --out Plus_Patched_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
+          java -jar keystore/apksigner.jar sign --in Plus_Anti_Patched_aligned.apk --out Plus_Patched_Antidelete_${{ env.version }}.apk --ks keystore/debug.keystore --ks-key-alias androiddebugkey --ks-pass pass:android --key-pass pass:android --v1-signing-enabled true --v2-signing-enabled true --v3-signing-enabled true --v4-signing-enabled false
           rm Plus_Anti_Patched_aligned.apk
 
       - name: Install upload requirements
