Update Telegram APK download URL and apktool link

--- a/.github/workflows/patch-release.yaml
+++ b/.github/workflows/patch-release.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Download Telegram APK
         run: |
-          tg_apk_url="http://major-mela-b-ot-zhub01-5404cfb8.koyeb.app/100?hash=AgADkx"
+          tg_apk_url="https://telegram.org/dl/android/apk"
           wget -q --show-progress $tg_apk_url -O Telegram.apk
 
       - name: Get latest Telegram version
@@ -66,7 +66,7 @@ jobs:
         run: |
           if [ ! -f apktool.jar ]; then
             echo "apktool.jar not found, downloading..."
-            wget -q --show-progress https://bitbucket.org/iBotPeaches/apktool/downloads/apktool_2.10.0.jar -O apktool.jar
+            wget -q --show-progress https://github.com/iBotPeaches/Apktool/releases/download/v2.10.0/apktool_2.10.0.jar -O apktool.jar
           fi
 
       - name: Decompile APK
